[package]
name = "tor_to_arti"
version = "0.1.0"
edition = "2024"
authors = ["hardcase"]

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
anyhow = "1.0.100"
chrono = "0.4.43"
toml_edit = "0.24.0"
tempfile = "3.24.0"
sysinfo = "0.38.0"
nix = { version = "0.31.1", features = ["process", "signal"] }
